# Pokesgi

./: .gitignore  .travis.yml  ClassDiagram.cd  ClassDiagram1.cd  IncludeFileDependencies1.dgml  Pokesgi-Info.plist  Pokesgi.vcxproj  Pokesgi.vcxproj.filters  README.md  main.cpp
Pokesgi/: CMakeLists.txt  Pokesgi.vcxproj  Pokesgi.vcxproj.filters  main.cpp
Pokesgi.xcodeproj/: project.pbxproj
Pokesgi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Pokesgi.xcodeproj/project.xcworkspace/xcuserdata/thibzy.xcuserdatad/: UserInterfaceState.xcuserstate
Pokesgi.xcodeproj/xcuserdata/thibzy.xcuserdatad/xcschemes/: Pokesgi.xcscheme  xcschememanagement.plist
Pokesgi/class/: Common.cpp  Hero.cpp  Hero.h  Item.cpp  Person.cpp  Person.h  Pokemon.cpp  Pokemon.h  SceneContainer.h  Trainer.cpp  Trainer.h
Pokesgi/class/scenes/: BattleScene.cpp  BattleScene.h  GameScene.cpp  GameScene.h
Pokesgi/cmake_modules/: FindSFML.cmake
Pokesgi/lib/: AnimatedSprite.h  Animation.cpp  Animation.h  NLTmxMap.h  ResourcePath.mm  ResourcePathDefault.cpp  Settings.cpp
Pokesgi/lib/NLTmx/: NLTmxMap.cpp
Pokesgi/lib/RapidXML/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_utils.hpp
class/: Attack.cpp  Attack.h  Common.cpp  Common.h  Helper.cpp  Helper.h  Hero.cpp  Hero.h  Item.h  Person.cpp  Person.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h
class/scenes/: GameScene.cpp  GameScene.h
lib/: AnimatedSprite.cpp  NLTmxMap.cpp  ResourcePathDefault.cpp  ResourcePathDefault.h  Settings.h
lib/RapidXML/: rapidxml_print.hpp
res/: map.tmx
